[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api", 
    "packages/shared",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "mysql"]}
# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
shared ={ path = "packages/shared"}
